@@ -720,3 +720,278 @@
 3
 3
 3
+0
+0
+0
+3
+1
+1
+1
+1
+0
+2
+2
+2
+2
+1
+3
+2
+2
+2
+2
+1
+3
+3
+3
+2
+2
+0
+0
+0
+0
+0
+3
+3
+1
+1
+1
+0
+0
+2
+2
+2
+1
+1
+3
+1
+1
+0
+0
+0
+2
+2
+1
+1
+1
+3
+3
+2
+2
+2
+0
+0
+0
+3
+3
+1
+1
+0
+0
+0
+2
+0
+0
+2
+2
+1
+1
+1
+3
+3
+2
+2
+3
+2
+2
+2
+2
+0
+3
+3
+3
+3
+1
+1
+1
+0
+0
+0
+2
+2
+1
+1
+1
+3
+3
+2
+2
+2
+0
+0
+3
+3
+3
+1
+1
+0
+0
+0
+2
+3
+2
+2
+2
+2
+0
+3
+3
+3
+3
+1
+0
+0
+0
+2
+2
+2
+2
+0
+3
+3
+3
+3
+1
+0
+0
+0
+0
+2
+1
+1
+1
+1
+0
+2
+2
+2
+2
+1
+3
+3
+3
+3
+2
+0
+0
+0
+0
+3
+1
+1
+1
+1
+0
+2
+0
+0
+0
+0
+2
+1
+1
+1
+1
+3
+2
+2
+2
+2
+0
+3
+3
+3
+3
+1
+0
+0
+0
+0
+1
+1
+1
+1
+1
+2
+2
+2
+2
+2
+3
+3
+3
+3
+3
+0
+0
+0
+0
+0
+1
+1
+1
+1
+0
+2
+2
+2
+2
+1
+3
+3
+3
+3
+2
+0
+0
+0
+0
+3
+1
+1
+1
+1
+0
+2
+1
+1
+3
+3
+3
+2
+2
+0
+0
+0
+3
+3
+1
+1
+1
+0
+0
+2
+3
+3
+3
+3
+0
+0
+0
+0
+0
+1
+1
+1
+1
+1
+2
