@@ -70,6 +70,7 @@ started on change to the way that colouring works.
 Version 0.4c 19/11/13
 sorted changlog viewing.
 started working from GIT(will hopefully continue to).
+chan ged titles to using arrays, hopefully making witty titles easier to impliment.
 
 
 
